# Compression

./: .gitignore  CMakeLists.txt  README.md
benchmark/: Benchmark1.cpp  DataGenerator.cpp  Results.md  main.cpp
benchmark/data/: readme.md
include/: Codec.hpp  DictionaryCodec.hpp  RunLengthCodec.hpp
scripts/: data.txt  plot_data.py
src/: DictionaryCodec.cpp  Helper.cpp  RunLengthCodec.cpp
tests/: DictionaryCodecTests.cpp  RunLengthCodecTests.cpp
